Add functionality to main screen
 - Implement a presenter for the view
 - The tests are not working yet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">LoginAssignment</string>
+    <string name="app_name">Login assignment</string>
+    <string name="logout_button">LOGOUT</string>
 </resources>
